# perceptra-zero-shot

./: README.md  pyproject.toml
examples/: api_usage.py  basic_detection.py  batch_processing.py  compare_models.py
perceptra_zero_shot/: __init__.py  __version__.py  types.py
perceptra_zero_shot/api/: __init__.py  main.py  models.py
perceptra_zero_shot/cli/: __init__.py  main.py
perceptra_zero_shot/core/: __init__.py  detector.py  result.py
perceptra_zero_shot/models/: __init__.py  base.py  grounding_dino.py  owlv2.py  registry.py
perceptra_zero_shot/utils/: __init__.py  image.py  visualization.py
tests/: __init__.py  test_api.py  test_cli.py  test_detector.py  test_models.py  test_result.py
